--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Listado de Contacto</title>
+  <title>{% block titulo %}Listado de Contacto{% endblock titulo %}</title>
 </head>
 <body>
 <h1>Template de listado</h1>
