--- a/templates/crear_persona.html
+++ b/templates/crear_persona.html
@@ -1,2 +1,9 @@
 {% extends 'index.html' %}
 {% block titulo %}Formulario de contacto{% endblock titulo %}
+{% block cuerpo %}
+
+<form method="post">
+  {{ form.as_p}}
+  <button type = "submit">Crear</button>
+</form>
+{% endblock cuerpo %}
