--- a/templates/crear_persona.html
+++ b/templates/crear_persona.html
@@ -3,7 +3,8 @@
 {% block cuerpo %}
 
 <form method="post">
+  {% csrf_token %}
   {{ form.as_p}}
-  <button type = "submit">Crear</button>
+  <button type = "submit">Crear o Editar</button>
 </form>
 {% endblock cuerpo %}
